--- a/package.json
+++ b/package.json
@@ -24,7 +24,26 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "airbnb"
+    ],
+    "rules": {
+      "linebreak-style": ["error", "windows"],
+      "function-paren-newline": "off",
+      "object-curly-newline": "off",
+      "semi": [
+        "error",
+        "never"
+      ],
+      "import/prefer-default-export": "off",
+      "react/destructuring-assignment": "off",
+      "react/forbid-prop-types": "off",
+      "react/jsx-filename-extension": "off",
+      "react/jsx-one-expression-per-line": "off",
+      "react/jsx-props-no-spreading": "off",
+      "react/require-default-props": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -37,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.0"
   }
 }
