--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "prop-types": "^15.7.2",
+    "rc-form": "^2.4.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -29,7 +31,10 @@
       "airbnb"
     ],
     "rules": {
-      "linebreak-style": ["error", "windows"],
+      "linebreak-style": [
+        "error",
+        "windows"
+      ],
       "function-paren-newline": "off",
       "object-curly-newline": "off",
       "semi": [
