--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "rc-form": "^2.4.11",
     "react": "^16.13.1",
